<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentInfoActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_min="150dp"
        app:layout_constraintWidth_min="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher_background"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPredmet"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/hintPredmet"
        app:hintTextColor="@color/black"
        android:background="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.7"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUnosPredmet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilIme"
        app:layout_constraintTop_toBottomOf="@+id/tilPredmet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tilAkademskaGodina"
        app:layout_constraintWidth_percent="0.45"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/unosIme"
            android:hint="@string/hintProfesor"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilAkademskaGodina"
        app:layout_constraintTop_toBottomOf="@+id/tilPredmet"
        app:layout_constraintLeft_toRightOf="@+id/tilIme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.45"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/unosAkademskaGodina"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintAkGod"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilSatiPredavanja"
        app:layout_constraintTop_toBottomOf="@+id/tilAkademskaGodina"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tilAkademskaGodina"
        app:layout_constraintWidth_percent="0.45"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/unosSatiPredavanja"
            android:hint="@string/hintPredavanja"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilSatiLv"
        app:layout_constraintTop_toBottomOf="@+id/tilAkademskaGodina"
        app:layout_constraintLeft_toRightOf="@+id/tilIme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.45"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/unosSatiLv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintLv"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUnosPredmet"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="100dp"
        android:hint="@string/btnUnos"
        android:background="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>