<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_min="150dp"
        app:layout_constraintWidth_min="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher_background"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilIme"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tilPrezime"
        app:layout_constraintWidth_percent="0.45"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/unosIme"
            android:hint="@string/hintIme"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilPrezime"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        app:layout_constraintLeft_toRightOf="@+id/tilIme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.45"

        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/unosPrezime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hintPrezime"
        android:layout_marginTop="16dp"
        android:textSize="14dp"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/tilIme"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/tvDatumRodenja"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilIme"
        app:layout_constraintRight_toLeftOf="@+id/tilDatumRodenja"
        app:layout_constraintWidth_percent="0.45"
        android:hint="@string/datumRodenja"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilDatumRodenja"
        app:layout_constraintTop_toBottomOf="@id/tilPrezime"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvDatumRodenja"
        app:layout_constraintWidth_percent="0.45"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:hint="@string/hintDatumRodenja"
            android:id="@+id/unosDatumRodenja"
            android:textSize="14dp"
            ></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDatumRodenja"
        android:layout_marginTop="16dp"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/btnUnos"
        />

</androidx.constraintlayout.widget.ConstraintLayout>