<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SummaryFragment">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:context=".fragments.SummaryFragment">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivImage"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_min="150dp"
                app:layout_constraintWidth_min="150dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_launcher_background"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvImeOpis"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivImage"
                app:layout_constraintRight_toLeftOf="@+id/tvIme"
                android:hint="@string/imeKorisnik"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvIme"
                app:layout_constraintTop_toBottomOf="@+id/ivImage"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPrezimeOpis"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvIme"
                app:layout_constraintRight_toLeftOf="@+id/tvPrezime"
                android:hint="@string/prezimeKorisnik"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tvPrezime"
                app:layout_constraintTop_toBottomOf="@+id/tvIme"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tvDatumRodenjaOpis"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPrezime"
                app:layout_constraintRight_toLeftOf="@+id/tvPrezime"
                android:hint="@string/datumRodenjaKorisnik"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDatumRodenja"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPrezime"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tvPredmetOpis"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDatumRodenja"
                app:layout_constraintRight_toLeftOf="@+id/tvDatumRodenja"
                android:hint="@string/nazivPredmetaKorisnik"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPredmet"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDatumRodenja"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tvProfesorOpis"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPredmet"
                app:layout_constraintRight_toLeftOf="@+id/tvPredmet"
                android:hint="@string/profesorKorisnik"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvProfesor"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPredmet"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tvAKGodinaOpis"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProfesor"
                app:layout_constraintRight_toLeftOf="@+id/tvProfesor"
                android:hint="@string/akGodKorinsik"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAkGodina"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProfesor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tvSatiPredavanjaOpis"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAkGodina"
                app:layout_constraintRight_toLeftOf="@+id/tvAkGodina"
                android:hint="@string/brojPredavanjaKorisnik"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSatiPredavanja"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvAkGodina"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/tvSatiLabosaOpis"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSatiPredavanja"
                app:layout_constraintRight_toLeftOf="@+id/tvSatiPredavanja"
                android:hint="@string/brojLabosaKorisnik"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSatiLabosa"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSatiPredavanja"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnHome"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:hint="@string/btnHome"
                android:background="@color/black"
                >

            </Button>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>