<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StudentInfoFragment">
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:context=".fragments.StudentInfoFragment">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_min="150dp"
        app:layout_constraintWidth_min="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher_background"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPredmet"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/hintPredmet"
        app:hintTextColor="@color/black"
        android:background="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.7">
        <Spinner
            android:id="@+id/spinnerPredmet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilProfesor"
        app:layout_constraintTop_toBottomOf="@+id/tilPredmet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tilAkademskaGodina"
        app:layout_constraintWidth_percent="0.45"
        >

        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/spinnerProfesor"
            android:hint="@string/hintProfesor"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilAkademskaGodina"
        app:layout_constraintTop_toBottomOf="@+id/tilPredmet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.45"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUnosAkademskaGodina"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintAkGod"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilSatiPredavanja"
        app:layout_constraintTop_toBottomOf="@+id/tilAkademskaGodina"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tilAkademskaGodina"
        app:layout_constraintWidth_percent="0.45"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/etUnosSatiPredavanja"
            android:hint="@string/hintPredavanja"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilSatiLv"
        app:layout_constraintTop_toBottomOf="@+id/tilAkademskaGodina"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.45"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUnosSatiLv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintLv"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            />
    </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>